--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <title>Adalin Sohtori | Kişisel Gelişim Mentoru</title>
   <style>
     body {
-    background-color: #F2EDE7; /* açık krem */
-    color: #3E0201; /* bordo yazılar */
+    background-color: #F2EDE7; /* light cream */
+    color: #3E0201; /* wine red */
     font-family: "Times New Roman", serif;
     margin: 0;
     padding: 20px;
 }
+
 
     header {
       text-align: center;
