--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 
-<header style="background-image: url('banner.jpg'); 
+<header style=" ; 
                 background-size: cover;
                 background-position: center;
                 color: #F2EDE7;
