--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!-- Footer area with profile picture centered at bottom -->
   <footer class="site-footer">
-    <img src="images/profile.jpg" alt="Adalin Sohtorik" class="profile">
+    <img src="IMG_0572 2.jpg" alt="Adalin Sohtorik" class="profile">
     <p class="copyright">&copy; 2025 Adalin Sohtorik</p>
   </footer>
 </body>
