--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p class="subtitle">Kişisel Gelişim Mentoru</p>
 
     <div class="cta-row">
-      <a class="cta primary" href="https://www.advicemy.com/danisman/adalin-sohtorik" target="_blank" rel="noopener noreferrer">Danışmanlık Al</a>
+      <a class="cta primary" href="https://www.advicemy.com/danisman/adalin-sohtorik" target="_blank" rel="noopener noreferrer">Seans Oluşturun</a>
       <a class="cta" href="https://www.tiktok.com/@adalin.live" target="_blank" rel="noopener noreferrer">TikTok</a>
     </div>
   </main>
