--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
     }
 
     header {
-      padding: 50px 20px 20px;
+      padding: 60px 20px 30px;
     }
 
     h1 {
@@ -25,7 +25,7 @@
 
     p {
       font-size: 18px;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
     }
 
     .blog-container {
@@ -38,12 +38,12 @@
 
     .blog-post {
       background-color: #fffaf6;
-      border: 1px solid #e0d6d0;
-      border-radius: 15px;
+      border: 1px solid #e0d7d0;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
       width: 300px;
       padding-bottom: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      transition: 0.3s;
+      transition: transform 0.3s;
     }
 
     .blog-post:hover {
@@ -52,85 +52,81 @@
 
     .blog-post img {
       width: 100%;
-      height: 200px;
+      height: 220px;
       object-fit: cover;
-      border-top-left-radius: 15px;
-      border-top-right-radius: 15px;
+      border-top-left-radius: 12px;
+      border-top-right-radius: 12px;
     }
 
     .blog-post h2 {
       font-size: 20px;
-      margin: 15px 0 10px;
+      color: #7b2b3b;
+      margin: 15px 10px 10px;
     }
 
     .blog-post p {
-      font-size: 15px;
+      font-size: 16px;
+      color: #7b2b3b;
       margin: 0 15px 15px;
-      color: #5a1e2a;
     }
 
     .button {
       background-color: #7b2b3b;
       color: #fdf6f0;
-      padding: 10px 20px;
+      padding: 8px 16px;
+      border: none;
       border-radius: 25px;
-      text-decoration: none;
       font-size: 14px;
+      text-decoration: none;
+      display: inline-block;
       transition: 0.3s;
     }
 
     .button:hover {
-      opacity: 0.8;
+      opacity: 0.85;
     }
 
     footer {
       margin-top: 60px;
-      padding: 20px;
+      padding: 30px 0;
       font-size: 14px;
-      color: #7b2b3b;
-    }
-
-    @media (max-width: 768px) {
-      .blog-post {
-        width: 90%;
-      }
     }
   </style>
 </head>
 
 <body>
+
   <header>
-    <h1>Blog</h1>
-    <p>Kişisel gelişime dair herşey..</p>
+    <h1>Blog Yazıları</h1>
+    <p>Kişisel gelişim, farkındalık ve içsel dönüşüm üzerine yazılar</p>
   </header>
 
   <div class="blog-container">
-
     <div class="blog-post">
-      <img src="-13.jpg" alt="Yazı 1">
+      <img src="layleo.jpg" alt="Yazı 1">
       <h2>Dünya Sizi Seviyor</h2>
-      <p> Dünya sizi seviyor ve bir gün sizi sarsmak için size sert bir şekilde vuracak çünkü aklınızı başınızıa getirmenin tek yolu budur.</p>
-      <a href="yazi1.html" class="button">Yazıyı Oku</a>
+      <p>Evrenin sizinle kurduğu bağı fark ettiğinizde, sevginin her şeyin özünde olduğunu anlarsınız.</p>
+      <a href="dunya-sizi-seviyor.html" class="button">Yazıyı Oku</a>
     </div>
 
     <div class="blog-post">
-      <img src="-11.jpg" alt="Yazı 2">
-      <h2> Yoğunlaşmış Sıkıntılar Hakkında.. </h2>
-      <p>Hayatımızın temeli kabullenmektir.</p>
+      <img src="leo.jpg" alt="Yazı 2">
+      <h2>Yoğunlaşmış Sıkıntılar Hakkında</h2>
+      <p>Hayatın temeli kabullenmektir. Sıkıntı, çözülmeyi bekleyen bir öğretidir.</p>
       <a href="yazi2.html" class="button">Yazıyı Oku</a>
     </div>
 
     <div class="blog-post">
-      <img src="https://github.com/adlnshtrk/adlnshtrk.github.io/blob/main/%20-12.jpg?raw=true" alt="Yazı 3">
+      <img src="leoa.jpg" alt="Yazı 3">
       <h2>Düşünce Sakızı</h2>
-      <p>Takıntılı düşüncelerden nasıl kurtulabilirsiniz..</p>
+      <p>Takıntılı düşünceler zihni meşgul eder; özgürleşmek için farkındalık gerekir.</p>
       <a href="yazi3.html" class="button">Yazıyı Oku</a>
     </div>
-
   </div>
 
   <footer>
-    © 2025 Adalin Sohtorik | Tüm Hakları Saklıdır
+    <p>&copy; 2025 Adalin Sohtorik | Tüm hakları saklıdır.</p>
   </footer>
+
 </body>
 </html>
