--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <h1>Adalin Sohtorik</h1>
     <p>Kişisel Gelişim Mentoru & Sayıların Psikolojisi Uzmanı & Psikolojik Farkındalık Koçu</p>
 
-    <a href="https://www.advicemy.com/danisman/adalin-sohtorik" class="button">Seans Oluşturun</a>
+<a href="https://www.advicemy.com/danisman/adalin-sohtorik" class="button" target="_blank">Seans Oluşturun</a>
     <a href="blog.html" class="button">Blog</a>
   </header>
 
@@ -89,7 +89,7 @@
     <div class="social-links">
       <a href="mailto:adlnshtrk@yahoo.com">İletişim</a> |
       <a href="https://www.tiktok.com/@adlnshtrk" target="_blank">TikTok</a> |
-      <a href="https://www.advicemy.com/uzman/adalinsohtorik" target="_blank">Advicemy</a>
+<a href="https://www.advicemy.com/uzman/adalinsohtorik" target="_blank">Advicemy</a>
     </div>
 
     <div class="profile-image">
