--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adalin Sohtorik | Blog</title>
@@ -20,9 +21,17 @@
       background-color: #f8f4ef;
       padding: 20px 40px;
       border-bottom: 1px solid #d8cfc9;
+      border-bottom: 1px solid #5a0016;
     }
 
     header h1 {
+      header h1 {
+  font-family: 'Cinzel', serif;
+  font-size: 28px;
+  font-weight: 600;
+  color: #5a0016;
+  margin: 0;
+}
       font-size: 24px;
       font-weight: 600;
       color: #5a0016;
