--- a/yazi1.html
+++ b/yazi1.html
@@ -71,7 +71,8 @@
 
   <div class="container">
     <div class="image-wrapper">
-      <img src="layleo.jpg" alt="Blog Görseli">
+     <img src="../layleo.jpg" alt="kapak">
+
     </div>
     <h1>Dünya Sizi Seviyor</h1>
     <p>
