--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <footer>
     <div class="social-links">
       <a href="mailto:adlnshtrk@yahoo.com">İletişim</a> |
-      <a href="https://www.tiktok.com/@adlnshtrk" target="_blank">TikTok</a> |
+      <a href="https://www.tiktok.com/@adalin.live" target="_blank">TikTok</a> |
 <a href="https://www.advicemy.com/uzman/adalinsohtorik" target="_blank">Advicemy</a>
     </div>
 
