--- a/blog.html
+++ b/blog.html
@@ -139,7 +139,7 @@
     </div>
 
     <div class="blog-post">
-      <img src="leo.jpg" alt="Yazı 2">
+      <img src="yogun.jpg" alt="Yazı 2">
       <h2>Yoğunlaşmış Sıkıntılar Hakkında</h2>
       <p>Hayatımızın temeli kabullenmektir...</p>
       <a href="yazi2.html" class="button">Yazıyı Oku</a>
