--- a/yazi2.html
+++ b/yazi2.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yoğunlaşmış Sıkıntılar - Adalin Sohtorik</title>
+  <title>Dünya Sizi Seviyor - Adalin Sohtorik</title>
   <style>
     body {
       font-family: "Georgia", serif;
-      line-height: 1.7;
+      background-color: #faf9f8;
+      color: #2e1f1f;
       margin: 0;
       padding: 0;
-      background-color: #fdf9f9;
-      color: #2e1f1f;
+      line-height: 1.7;
     }
 
     header {
@@ -21,8 +21,8 @@
 
     header h1 {
       font-family: "The Seasons", serif;
-      color: #4a1c24;
       font-size: 30px;
+      color: #4a1c24;
       margin-bottom: 10px;
     }
 
@@ -38,86 +38,4 @@
       transition: background-color 0.3s;
     }
 
-    .back-button:hover {
-      background-color: #6d2c37;
-    }
-
-    hr {
-      border: none;
-      border-top: 1px solid #4a1c24;
-      width: 60%;
-      margin: 20px auto;
-    }
-
-    .cover-image {
-      display: block;
-      margin: 40px auto 20px;
-      width: 300px; /* kare ve büyük boyut */
-      height: 300px;
-      object-fit: cover;
-      border-radius: 12px; /* yuvarlak değil */
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    }
-
-    .content {
-      max-width: 750px;
-      margin: 0 auto;
-      padding: 20px;
-      font-size: 18px;
-      text-align: justify;
-    }
-
-    footer {
-      text-align: center;
-      padding: 30px;
-      color: #4a1c24;
-      font-size: 14px;
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h1>Yoğunlaşmış Sıkıntılar</h1>
-    <a href="blog.html" class="back-button">← Ana Sayfa</a>
-    <hr>
-  </header>
-
-  <img src="yogun.jpg" alt="Yoğunlaşmış Sıkıntılar" class="cover-image">
-
-  <div class="content">
-    <p>
-      Hayatımızın temeli kabullenmektir. İyilik kabul üzerine kuruludur, sevgi ise iyiliğin üzerine kuruludur.
-      Geleceğinizin kolaylıkla gelmesini istiyorsanız, mümkün olduğunca iyilik hallerini deneyimleyin.
-    </p>
-
-    <p>
-      Şefkat ve merhameti, acıma ve merhametle karıştırmamak gerektiği gibi, kabullenmeyi de sabırla karıştırmamak gerekir.
-      Mesela birisi çok konuştuğunda, konuşuyor, biz de katlanıyoruz, katlanıyoruz ve sonra sopayla vuruyoruz işte sabır budur.
-      Kabullenme ise birisinin konuşmasının müzikal bir şekilde hoş olması ve devam etmesine izin vermemizdir, çünkü biz bunu gerçekten severiz.
-    </p>
-
-    <p>
-      Aradaki fark çok büyüktür dikkat edin. Dolayısıyla eğer bir yerde, bir zamanda birine tahammül ederseniz, düşük frekanslı titreşimler yaratırsınız
-      ve geleceğin gelmesine izin vermezsiniz. Geldiğinde tam da bu düşük frekanslı titreşimleri yok edecektir.
-      Ve bu sizde öfke, kırgınlık, nefret ve depresyon gibi duyguları ortaya çıkartacaktır.
-    </p>
-
-    <p>
-      Mesela zaten kötü bir ruh halindesiniz ve birileri üstünüze gelip onu daha da kötüleştirir
-      (ayağınıza basarlar, maaşınızı zamanında ödemezler vb. siz anladınız diye düşünüyorum,
-      burada yazdıklarımı anlayan birkaç insanın var olduğuna inanıyorum).
-      Yani size sıkıntı verildiğinde kabul oranınız artar, böylece daha fazlasını kabul edersiniz.
-      Çünkü temel kabullenmektir.
-    </p>
-
-    <p>
-      Enerji dağılımı her zaman şöyle olmalıdır: %70 geçmişin ve bugünün kabulü, %30 geleceğin kabulü.
-      Eğer gelecekte çok fazla birikim oluşuyorsa, ama mevcut ve geçmişin kabulü yetersizse,
-      kabul etmeyi artırmak için sıkıntılarla karşılaşmanızı sağlarlar.
-      Yani, kabul etmeniz gereken sıkıntılar size sunulur.
-      Geçmiş ve geleceğin uyumu %70 / %30 seviyesinde olmalıdır.
-    </p>
-  </div>
-
-  <footer>
+    .back
