--- a/yazi1.html
+++ b/yazi1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yoğunlaşmış Sıkıntılar - Adalin Sohtorik</title>
+  <title>Dünya Sizi Seviyor - Adalin Sohtorik</title>
   <style>
     body {
       font-family: "Georgia", serif;
@@ -99,23 +99,29 @@
 <body>
 
   <header>
-    <h1>Yoğunlaşmış Sıkıntılar</h1>
+    <h1>Dünya Sizi Seviyor</h1>
     <a href="blog.html" class="back-button">← Ana Sayfa</a>
     <hr>
   </header>
 
-  <img src="yogun.jpg" alt="Yoğunlaşmış Sıkıntılar" class="cover-image">
+  <img src="dunya.jpg" alt="Dünya Sizi Seviyor" class="cover-image">
 
   <div class="content">
-    <p>Hayatımızın temeli kabullenmektir. İyilik kabul üzerine kuruludur, sevgi ise iyiliğin üzerine kuruludur. Geleceğinizin kolaylıkla gelmesini istiyorsanız, mümkün olduğunca iyilik hallerini deneyimleyin.</p>
+    <p>Acı sadece bize gelmiyor. Bu, eylemlerimizin, kararlarımızın veya eylemsizliğimizin bir sonucudur. Acı, doğru yoldan saptığımızda yanan bir nevi kırmızı ışıktır. Acı, bize her zaman neyin dikkat edilmesi ve düzeltilmesi gerektiğini gösteren sadık yoldaşımızdır.</p>
 
-    <p>Şefkat ve merhameti, acıma ve merhametle karıştırmamak gerektiği gibi, kabullenmeyi de sabırla karıştırmamak gerekir. Mesela birisi çok konuştuğunda, konuşuyor, biz de katlanıyoruz, katlanıyoruz ve sonra sopayla vuruyoruz işte sabır budur. Kabullenme ise birisinin konuşmasının müzikal bir şekilde hoş olması ve devam etmesine izin vermemizdir, çünkü biz bunu gerçekten severiz.</p>
+    <p>Ne yazık ki çoğu durumda acının sesine kulak vermek istemiyoruz. Onu, hayatımızı mahvetmeye gelen bir düşman olarak algılıyoruz. Oluşmasının nedenlerini aramak yerine, onu basitçe bastırırız, hoş izlenimlerle boğmaya çalışırız. Ancak acı düşman değildir. Bu, hayatta kalmamıza ve ruhsal olarak büyümemize yardım etmeye gelen bilge bir öğretmendir.</p>
 
-    <p>Aradaki fark çok büyüktür dikkat edin. Dolayısıyla eğer bir yerde, bir zamanda birine tahammül ederseniz, düşük frekanslı titreşimler yaratırsınız ve geleceğin gelmesine izin vermezsiniz. Geldiğinde tam da bu düşük frekanslı titreşimleri yok edecektir. Ve bu sizde öfke, kırgınlık, nefret ve depresyon gibi duyguları ortaya çıkartacaktır.</p>
+    <p>Acı bize kendimize ve ihtiyaçlarımıza dikkat etmeyi öğretir. Bizi kendi davranışlarımızı analiz etmeye ve kararlarımızı yeniden gözden geçirmeye zorlar. Acı sayesinde kendimize ve başkalarına karşı daha sorumlu olmayı ve şefkatli olmayı öğrenebiliriz.</p>
 
-    <p>Mesela zaten kötü bir ruh halindesiniz ve birileri üstünüze gelip onu daha da kötüleştirir (ayağınıza basarlar, maaşınızı zamanında ödemezler vb. siz anladınız diye düşünüyorum, burada yazdıklarımı anlayan birkaç insanın var olduğuna inanıyorum). Yani size sıkıntı verildiğinde kabul oranınız artar, böylece daha fazlasını kabul edersiniz. Çünkü temel kabullenmektir.</p>
+    <p>Acı bize şefkati öğretir. Acı yaşadığımızda başkalarının acısını daha iyi anlar ve daha empatik oluruz. Acı, insanlık duygumuzu ve ihtiyacı olanlara yardım etme arzumuzu geliştirmemize yardımcı olur.</p>
 
-    <p>Enerji dağılımı her zaman şöyle olmalıdır: %70 geçmişin ve bugünün kabulü, %30 geleceğin kabulü. Eğer gelecekte çok fazla birikim oluşuyorsa, ama mevcut ve geçmişin kabulü yetersizse, kabul etmeyi artırmak için sıkıntılarla karşılaşmanızı sağlarlar. Yani, kabul etmeniz gereken sıkıntılar size sunulur. Geçmiş ve geleceğin uyumu %70 / %30 seviyesinde olmalıdır.</p>
+    <p>Pelevin'in sevdiğim bir sözü vardır: “Hayat çok tuhaf. Kuyudan çıkmak için içine düşmeniz gerekir.”</p>
+
+    <p>Acı bize hayatın değerini bilmeyi öğretir. Acı yaşadığımızda, acının olmadığı anların kıymetini bilmeye başlarız. Acı bizi bizim için gerçekten neyin önemli olduğunu düşünmeye ve önemsiz şeylerle zaman kaybetmemeye zorlar.</p>
+
+    <p>Acıdan korkulmaması veya göz ardı edilmemesi gerekir. Acı, daha iyi olmamıza yardım etmeye gelen bir öğretmenimizdir. Kimse mükemmel değildir ve hepimiz öyle ya da böyle hata yaparız.</p>
+
+    <p>“Dünya seni seviyor. Ve bir gün seni sarsmak için sana sert bir şekilde vuracak çünkü aklını başına toplamanın tek yolu bu.”</p>
 
     <div class="button-container">
       <a href="https://www.advicemy.com/danisman/adalin-sohtorik" target="_blank" class="session-button">Seans Oluştur</a>
